<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/customerDetailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/activity_vertical_margin"
    android:layout_marginRight="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.salagroup.salaman.fragments.CustomerDetailsFragment">

    <TextView
        android:id="@+id/tvTitleCustomerInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/fragment_title_magin_top"
        android:text="@string/title_fragment_customer_detail"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/cyan" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtCustomerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_detail_name"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtCustomerPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_detail_phone"
                    android:inputType="phone"
                    android:maxLength="20" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:hint="@string/customer_detail_birthday" />

            </android.support.design.widget.TextInputLayout>

            <View style="@style/Divider" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/customer_detail_address"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#33b5e5" />

            <tdt.minh095.ohman.view.CustomSpinner
                android:id="@+id/spnProvincials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_horizontal_margin" />

            <tdt.minh095.ohman.view.CustomSpinner
                android:id="@+id/spnDistricts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/activity_horizontal_margin" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/store_info_item_address"
                    android:inputType="textMultiLine"
                    android:maxLength="100"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin" />

            </android.support.design.widget.TextInputLayout>

            <View style="@style/Divider" />

            <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
            <!--android:paddingTop="@dimen/activity_vertical_margin"-->
            <!--android:text="@string/customer_detail_birthday"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:textColor="@color/cyan" />-->

            <!--<DatePicker-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/dpkBirthday"-->
            <!--android:calendarViewShown="false"-->
            <!--android:datePickerMode="spinner"/>-->

            <!--</LinearLayout>-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_detail_gender"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#33b5e5" />

                <RadioGroup
                    android:id="@+id/rdgGenderType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/tv_detail_customer_margin_left"
                    android:layout_marginStart="@dimen/tv_detail_customer_margin_left"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdbMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/customer_detail_gender_male" />

                    <RadioButton
                        android:id="@+id/rdbFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/tv_detail_customer_margin_left"
                        android:layout_marginStart="@dimen/tv_detail_customer_margin_left"
                        android:text="@string/customer_detail_gender_female" />

                    <RadioButton
                        android:id="@+id/rdbOther"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/tv_detail_customer_margin_left"
                        android:layout_marginStart="@dimen/tv_detail_customer_margin_left"
                        android:text="@string/customer_detail_gender_None" />
                </RadioGroup>


            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_detail_type"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#33b5e5" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Spinner
                        android:id="@+id/spnCustomerGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toLeftOf="@+id/btnAddGroup"
                        android:layout_toStartOf="@+id/btnAddGroup" />

                    <ImageButton
                        android:id="@+id/btnAddGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@android:drawable/ic_input_add" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCusDetailCancel"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_customer_group_cancel" />

        <Button
            android:id="@+id/btnCusDetailDelete"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_customer_group_delete" />

        <Button
            android:id="@+id/btnCusDetailUpdate"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_info_item_update" />

    </LinearLayout>


</LinearLayout>