<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_create_customer_text_info_marginBottom"
        android:layout_marginLeft="@dimen/activity_create_customer_text_info_marginLeft"
        android:layout_marginStart="@dimen/activity_create_customer_text_info_marginLeft"
        android:text="@string/information_customer"
        android:textSize="@dimen/activity_create_customer_text_info_size" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="@dimen/activity_create_customer_card_paddingRight"
        android:paddingLeft="@dimen/activity_create_customer_card_paddingLeft"
        android:paddingRight="@dimen/activity_create_customer_card_paddingRight"
        android:paddingStart="@dimen/activity_create_customer_card_paddingLeft">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_create_edit_marginBottom"
                android:layout_marginTop="@dimen/activity_create_edit_marginTop">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_customer" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_create_edit_marginBottom"
                android:layout_marginTop="@dimen/activity_create_edit_marginTop">

                <EditText
                    android:id="@+id/tv_customer_birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/birthday_customer"
                    android:inputType="none" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_create_customer_text_title_marginLeft"
                android:layout_marginStart="@dimen/activity_create_customer_text_title_marginLeft"
                android:text="@string/sex_customer"
                android:textSize="@dimen/activity_create_hint_size" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_create_customer_radioGroup_marginTop"
                android:orientation="horizontal"
                android:weightSum="3">

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sex_male" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sex_female" />

                <android.support.v7.widget.AppCompatRadioButton
                    android:id="@+id/vi2ew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sex_more" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_create_edit_marginBottom"
                android:layout_marginTop="@dimen/activity_create_edit_marginTop"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_create_customer_text_title_marginLeft"
                    android:layout_marginStart="@dimen/activity_create_customer_text_title_marginLeft"
                    android:text="@string/group_customer"
                    android:textSize="@dimen/activity_create_hint_size" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <android.support.v7.widget.AppCompatSpinner
                        style="@android:style/Widget.Holo.Light.Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="4"
                        android:entries="@array/group_customer" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/view"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="6"
                        android:text="@string/add_new_group" />


                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>