<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_create_shop_text_info_marginBottom"
        android:layout_marginLeft="@dimen/activity_create_shop_text_info_marginLeft"
        android:text="@string/info_shop"
        android:textSize="@dimen/activity_create_customer_text_info_size" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="@dimen/activity_create_customer_card_paddingRight"
        android:paddingLeft="@dimen/activity_create_customer_card_paddingLeft"
        android:paddingRight="@dimen/activity_create_customer_card_paddingRight"
        android:paddingStart="@dimen/activity_create_customer_card_paddingLeft">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_create_edit_marginBottom"
                android:layout_marginTop="@dimen/activity_create_edit_marginTop">

                <EditText
                    android:id="@+id/edtShopName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/create_shop_name"
                    android:maxLength="20"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_create_edit_marginBottom"
                android:layout_marginTop="@dimen/activity_create_edit_marginTop">

                <EditText
                    android:id="@+id/edtShopPeriod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time_work"
                    android:minLines="3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_create_shop_text_info_marginBottom"
                android:layout_marginLeft="@dimen/activity_create_shop_text_info_marginLeft"
                android:text="@string/specialize"
                android:textSize="@dimen/activity_create_hint_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/ckbIndustry1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/food" />

                    <CheckBox
                        android:id="@+id/ckbIndustry2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fashion" />

                    <CheckBox
                        android:id="@+id/ckbIndustry3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/technology" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/ckbIndustry4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Làm đẹp" />

                    <CheckBox
                        android:id="@+id/ckbIndustry5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Gia dụng" />

                    <CheckBox
                        android:id="@+id/ckbIndustry6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sách" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btnOtherIndustry"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|right"
                        android:layout_marginRight="@dimen/activity_create_shop_button_marginRight"
                        android:text="@string/specialize_more"
                        android:textColor="@color/blue500"
                        android:textSize="@dimen/activity_create_shop_textSize_button" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>